<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
       android:title="@string/settings" >
 
	<postpone.the.inevitable.menu.PreferenceComboBox 
	    android:layout="@layout/preference_layout"
	    android:title="@string/soundenabled_title" 
	    android:summaryOn="@string/soundenabled_summaryOn" 
	    android:summaryOff="@string/soundenabled_summaryOff" 
	    android:defaultValue="true" 
	    android:key="sound" 
	    android:summary="@string/soundenabled_summaryOn"/>  
    
      <postpone.the.inevitable.menu.PreferenceList 
	    android:layout="@layout/preference_layout"
        android:title="@string/offset_title"
		android:key="offset" 
		android:summary="@string/offset_summary" 
		android:entries="@array/offset_names"
		android:entryValues="@array/offset_values" 
		android:defaultValue="1"
		/>
	
	<postpone.the.inevitable.menu.PreferencePreference
	    android:layout="@layout/preference_layout"
	    android:key="clear_data"
	    android:summary="@string/clear_summary"
	    android:title="@string/clear_title" />

	<postpone.the.inevitable.menu.PreferencePreference
	    android:layout="@layout/preference_layout"
	    android:key="about"
	    android:summary="@string/about_summary"
	    android:title="@string/about_title" />
		
</PreferenceScreen>
